changed resources to relative path

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 	  gtag('config', 'G-6X11ZSK31W');
 	</script>	
 
-	<link rel="icon" href="/images/otc-logo-01.png">
+	<link rel="icon" href="./images/otc-logo-01.png">
 	
-	<link rel="stylesheet" href="/css/bootstrap.css">
-	<link rel="stylesheet" href="/css/site.css" type="text/css">
-	<link rel="stylesheet" href="/css/print.css" media="print">
+	<link rel="stylesheet" href="./css/bootstrap.css">
+	<link rel="stylesheet" href="./css/site.css" type="text/css">
+	<link rel="stylesheet" href="./css/print.css" media="print">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.js"></script>
-	<script type="text/javascript" src="/js/prettify.min.js"></script>
-	<script type="text/javascript" src="/js/site.js"></script>
-	<script type="text/javascript" src="/js/otc.js"></script>
+	<script type="text/javascript" src="./js/jquery.min.js"></script>
+	<script type="text/javascript" src="./js/bootstrap.js"></script>
+	<script type="text/javascript" src="./js/prettify.min.js"></script>
+	<script type="text/javascript" src="./js/site.js"></script>
+	<script type="text/javascript" src="./js/otc.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	
