changed resource references to relative path

--- a/html/documentation/01-getting-started.html
+++ b/html/documentation/01-getting-started.html
@@ -13,9 +13,9 @@
 	<meta name="Date-Revision-yyyymmdd" content="20220724">
 	<meta http-equiv="Content-Language" content="en">
 
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="./js/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-	<script type="text/javascript" src="/js/otc-child-pages.js"></script>
+	<script type="text/javascript" src="./js/otc-child-pages.js"></script>
 
 </head>
 
