--- a/html/06-downloads-releases.html
+++ b/html/06-downloads-releases.html
@@ -13,10 +13,10 @@
 	<meta name="Date-Revision-yyyymmdd" content="20220417">
 	<meta http-equiv="Content-Language" content="en">
 
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="./js/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="/js/otc-child-pages.js"></script>
+	<script type="text/javascript" src="./js/otc-child-pages.js"></script>
 
 </head>
 
